[package]
name = "cargo-smart-release"
version = "0.20.0"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/Byron/gitoxide"
description = "Cargo subcommand for fearlessly releasing crates in workspaces."
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[[bin]]
name = "cargo-smart-release"
path = "src/cli/main-smart-release.rs"
test = false

[[bin]]
name = "cargo-changelog"
path = "src/cli/main-changelog.rs"
test = false

[features]
cache-efficiency-debug = ["gix/cache-efficiency-debug"]
vendored-openssl = ["crates-index/vendored-openssl"]

[dependencies]
gix = { version = "^0.47.0", path = "../gix", default-features = false, features = ["max-performance-safe"] }
anyhow = "1.0.42"
clap = { version = "4.1.0", features = ["derive", "cargo"] }
env_logger = { version = "0.10.0", default-features = false, features = ["humantime", "auto-color"] }
cargo_metadata = "0.15.0"
log = "0.4.14"
toml_edit = "0.19.1"
semver = "1.0.4"
crates-index = "0.19.3"
cargo_toml = "0.15.1"
nom = { version = "7", default-features = false, features = ["std"]}
git-conventional = "0.12.0"
time = "0.3.19"
pulldown-cmark = "0.9.0"
bitflags = "2"
home = "0.5.3"

[dev-dependencies]
insta = "1.8.0"
gix-testtools = { path = "../tests/tools"}
