[package]
name = "git-demos"
version = "0.1.0"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
publish = false
edition = "2018"

[[bin]]
name = "git-count"
path = "git-count.rs"
doctest = false
test = false

[dependencies]
git-odb = { version = "0.1.0", path = "../gitoxide-odb" }
rayon = "1.3.0"
anyhow = "1.0.31"

[profile.release]
overflow-checks = false
lto = "fat"
panic = 'abort'
codegen-units = 1
incremental = false

